--- a/PortReact/PortReact/ClientApp/src/Styles/main.css
+++ b/PortReact/PortReact/ClientApp/src/Styles/main.css
@@ -2,21 +2,21 @@
     margin: 0;
 }
 
-    body {
+body {
     background-image: url(./fondo.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    font-family: 'Raleway', sans-serif;
 }
 
+.margen{
+    margin: 1%;
+}
 .contini {
     text-align:center;
 }
-
-.margen {
-    margin: 10%;
-}
-
 .Container-title {
+    padding-top: 5%;
     text-align: center;
     border-bottom: 1px solid rgba(0, 0, 0, .05);
 }
@@ -39,20 +39,20 @@
 }
 
 .img1port {
-    content: url(./img1.jpg);
+    content: url(./img1edit.jpg);
     max-width: 300px;
     max-height: 400px;
-    border-radius: 10%;
+    border-top-left-radius: 45%;
+    border-top-right-radius: 45%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .img2port {
-    content: url(./img2.jpg);
-    max-width: 350px;
-    max-height: 350px;
-    border-radius: 15%;
+    content: url(./img2edit.jpg);
+    max-width: 300px;
+    max-height: 400px;
+    border-radius: 5%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    align-content: flex-end;
 }
 
 #btncv {
@@ -67,29 +67,29 @@
     transition: .3s;
     z-index: 1;
     font-family: inherit;
-    color: white;
+    color:white;
 }
 
-    #btncv::before {
-        content: '';
-        width: 0;
-        height: 300%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) rotate(45deg);
-        background: #d73838;
-        transition: .5s ease;
-        display: block;
-        z-index: -1;
-    }
+#btncv::before {
+    content: '';
+    width: 0;
+    height: 300%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    background: #d73838;
+    transition: .5s ease;
+    display: block;
+    z-index: -1;
+}
 
     #btncv:hover::before {
         width: 105%;
     }
 
     #btncv:hover {
-        color: white;
+        color: black;
     }
 
 .icon img {
@@ -108,15 +108,15 @@
 }
 
 .container-aboutme {
-    text-justify: auto;
-    margin: 0 auto 1rem;
+
+    margin: 10%;
     padding: 5em 0 1em;
     text-align: center;
     border-bottom: 1px solid rgba(0, 0, 0, .05);
 }
 
 .titabout {
-    padding-bottom: 2em;
+    padding-bottom: 1em;
     color: white;
 }
 
@@ -130,15 +130,12 @@
         color: white;
     }
 
-.contcirculos {
-    align-self: center;
-}
-
 .exp {
     margin: 10%;
     align-self: center;
     background-color: #913636;
-    height: 180px;
+    width: 185px;
+    height: 150px;
     border-radius: 5%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -163,16 +160,14 @@
 
 .Container-skills {
     position: relative;
+    margin: 10%;
 }
 
 
 .Cont-skills {
-    display: absolute;
-    top: 50%;
-    left: 50%;
+    margin: 5px;
     transform: translate(-50% -50%);
-    padding: 1em;
-    margin: 10px;
+    padding: 10px;
     background-color: #913636;
     border-radius: 2%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -204,6 +199,7 @@
 
 .explab {
     position: relative;
+    margin: 10%;
 }
 
 .titexp {
@@ -214,9 +210,7 @@
 }
 
 .box-exp {
-    display: absolute;
-    top: 50%;
-    left: 50%;
+    margin: 5px;
     transform: translate(-50% -50%);
     border-bottom-left-radius: 5%;
     border-bottom-right-radius: 5%;
@@ -355,9 +349,39 @@
     font-family: inherit;
     color: white;
 }
-/*
-.emailBtn {
-    content: url(./gmail-logo.png);
-    width: 30px;
+
+.imgnavgit {
+    content: url(./github.png);
 }
-*/
+.imgnavmail {
+    content: url(./gmail-logo.png);
+}
+.imgnavwsp {
+    content: url(./whatsapp.png);
+}
+.imgnavtw {
+    content: url(./twitter-sign.png);
+}
+
+header{
+    width: min-content;
+}
+#menu {
+    position: absolute;
+    top: 5%;
+}
+
+    #menu ul li {
+       
+        padding-top: 1px;
+    }
+
+        #menu ul li a {
+            color: black;
+            line-height: 60px;
+            transition: .2s;
+        }
+
+            #menu ul li a:hover {
+                background: #913636;
+            }
